# OS

./: .gitignore  CMakeLists.txt  README.md  zeng.shi.sz1358.osc.01.tgz
Lab01/: makefile
Lab01/src/: compile.c  n_children_loop.c  n_children_rec.c  spy.c
Lab02/: .gitignore  Makefile  sched-run.txt
Lab02/include/: os-scheduling.h
Lab02/src/: sched-policies.c  sched-simulator.c
Lab03/: init-sig.1.c  init-sig.2.c  init-sig.3.c  init-sig.4.c  init-sig.5.c  makefile  voodoo.c
Lab03/src/: pending-ignore.c  pending-redefine.c  pending-signals.c
Lab05/src/: mutex.c  thread_creation.c
WS01.start/: README.md  makefile
WS01.start/include/: fifo.h  list.h  stack.h
WS01.start/src/: fifo_list.c  fifo_test.c  list_impl.c  stack_array.c  stack_list.c  stack_test.c
WS02.start/: README.md  makefile
WS02.start/draw/: draw.tex
WS02.start/src/: converters.c  decoder.c  multi_converter.c  trace.c
WS03.start/: Makefile  README.md
WS03.start/include/: os-scheduling.h
WS03.start/src/: sched-policies.c  sched-simulator.c
WS04.start/: Makefile  README.md
WS04.start/include/: head.h
WS04.start/src/: double_sync.c  single_sync.c  sleep-test.c  sleep.c  wave.c
WS05.start/: Makefile  README.md  run.sh
WS05.start/include/: header.h
WS05.start/src/: conversion_client.c  conversion_server.c  dinner.c  utils.c
WS06.start/: Makefile  README.md
WS06.start/include/: header.h
WS06.start/input/: guess.txt  taker.txt  warden.txt
WS06.start/src/: bounded-buffer.c  chain.c  mutex_upper.c  upper.c
